loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:3: error: ')' expected but '<-' found.
  for ((stepper <- 1 to 9)) {
                ^LoopCourse:14: error: '<-' expected but '}' found.
} 
^